[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sdf"
version = "0.1"
description = "Generate 3D meshes from signed distance functions."
authors = [
  { name = "Michael Fogleman", email = "michael.fogleman@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "matplotlib",
  "meshio",
  "numpy",
  "scikit-image>=0.17",
  "scipy",
  "Pillow",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
]

[tool.setuptools.packages.find]
include = ["sdf"]
