[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sdf"
version = "0.1.0"
description = "Generate 3D meshes from signed distance functions."
authors = [
    { name = "Michael Fogleman", email = "michael.fogleman@gmail.com" },
]
license = "MIT"
license-files = ["LICENSE.md"]
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "matplotlib",
    "meshio",
    "numpy",
    "scikit-image>=0.17",
    "scipy",
    "Pillow",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

[tool.setuptools.packages.find]
include = ["sdf"]
