[project]
name = "sdf"
version = "0.1.0"
description = "Generate 3D meshes from signed distance functions."
authors = [{ name = "Michael Fogleman", email = "michael.fogleman@gmail.com" }]
license = "MIT"
license-files = ["LICENSE.md"]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "matplotlib",
    "meshio",
    "numpy",
    "scikit-image>=0.17",
    "scipy",
    "Pillow",
]

[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"
